# mandelbrod_set_drawer

./: .gitignore  CMakeLists.txt  ImGuiHandler.cpp  ImGuiHandler.hpp  MandelbrotSetGenerator.cpp  MandelbrotSetGenerator.hpp  README.md  SDLApp.cpp  SDLApp.hpp  SDLTypes.hpp  main.cpp
lib/metal/: CMakeLists.txt  MangdelbrotSetGenerator.metal
